--- a/css/styles.css
+++ b/css/styles.css
@@ -5,11 +5,38 @@ body, html {
   color: #777;
 }
 
-a {
-  color: #878787;
+b{
+  color: #262626;
 }
 
-.bgimg-1, .bgimg-2, .bgimg-3 {
+a {
+  color: #878787;
+  text-decoration: none;
+    border: 10px;
+    border-left: 10px;
+    border-right: 10px;
+    border-radius: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.widespacing{
+  word-spacing: 20px;
+}
+
+a:hover {
+    text-decoration: none;
+    border: 10px;
+    border-left: 10px;
+    border-right: 10px;
+    border-radius: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    background-color: #c9c9c9;
+    color: #f7f7f7;
+}
+
+.bgimg-1, .bgimg-2, .bgimg-3, .bgimg-lab{
   position: relative;
   opacity: 0.65;
   background-attachment: fixed;
@@ -23,6 +50,14 @@ a {
   background-image: url("../img/lab.jpg");
   background-size: 100%;
   min-height: 50%;
+
+}
+
+.bgimg-short{
+  background-image: url("../img/aabm_bot.jpg");
+  background-size: 100%;
+  min-height: 25%;
+  background-repeat: no-repeat;
 
 }
 
@@ -54,10 +89,29 @@ a {
   text-align: center;
 }
 
+.setleft{
+  text-align: left;
+}
+
 .caption span.border {
 
   position: absolute;
   top: 100%;
+  left: 5%;
+  width: 90%;
+  background-color: #111;
+  background: rgba(0,0,0,0.7);
+
+  color: #fff;
+  padding: 18px;
+  font-size: 25px;
+  letter-spacing: 10px;
+}
+
+.highcaption span.border {
+
+  position: absolute;
+  top: 5%;
   left: 5%;
   width: 90%;
   background-color: #111;
